--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDJ parser</title>
+    <title>PDF parser</title>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css'/>
 </head>
 <body>
 
     <div class="container-fluid">
-        <h1>PDJ parser</h1>  
+        <h1>PDF parser</h1>  
         
         <p>This project was to make a parcer to display the data in an example PDF file give to us by CodeUp and display the text in formated way</p>
     </div>
